osso-af-startup (1.2-1) unstable; urgency=low

  * ke-recv is not started anymore, it is now under init.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 26 Jan 2006 11:19:52 +0200

osso-af-startup (1.1-1) unstable; urgency=low

  * LANGUAGE is now unset in the default 'locale' file (bug 21780).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 09 Jan 2006 09:46:35 +0200

osso-af-startup (1.0-1) unstable; urgency=low

  * Modifications for new DBus.
  * AF environment is now included to every shell in /etc/profile.
  * D-BUS session bus now uses an abstract socket and dynamic address.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 25 Nov 2005 13:12:50 +0200

osso-af-startup (0.70-1) unstable; urgency=low

  * Added creation and deletion of im_disable_tools_menu to real-af-startup
    (bug 21348).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 17 Nov 2005 14:31:26 +0200

osso-af-startup (0.69-2) unstable; urgency=low

  * Set execute property for get-devlock.sh in postinst script (bug 21278).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 14 Nov 2005 13:20:56 +0200

osso-af-startup (0.69-1) unstable; urgency=low

  * Set execute property for get-devlock.sh (bug 21278).
  * Starting ke-recv now earlier so that MMC volume label is available
    when GnomeVFS wants it (bug 17805). Also restarting it now in the
    first boot, since the session bus is restarted then.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 11 Nov 2005 16:43:07 +0200

osso-af-startup (0.68-1) unstable; urgency=low

  * Now removing first-boot-flag later (bug 21035).
  * Skipping progress bar when device lock is on (bug 20454).
  * Unsetting LC_ALL in default locale file (bug 17188).
  * Removed non-functional stopping of fb-progress from real-af-startup.
  * Added missing sourcing of keyboard.defs to after-suw... script.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 01 Nov 2005 12:02:06 +0200
