@@ -7,7 +7,7 @@ Standards-Version: 3.6.0
 
 Package: osso-af-startup
 Architecture: all
-Depends: osso-af-utils (>= 0.10), osso-core-config, lsof, dbus-1-utils
+Depends: osso-af-utils (>= 1.1), osso-core-config, dbus-1-utils
 Description: Application framework top startup scripts
  Application framework startup scripts af-services, af-startup and
  af-base-apps. Also includes D-BUS session bus starting script.
